// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the NoResults component matches the snapshot in the case of no orders 1`] = `
<div
  className="beArzs"
>
  <p>
    <span>
      Welcome to the downloads overview.
    </span>
  </p>
  <p>
    <span>
      It looks like you haven’t bought any products with downloadable files yet.
    </span>
  </p>
  <p>
    <span>
      Press the button below to visit yoast.com and look at our products.
    </span>
  </p>
  <a
    className="ewhypI"
    href="/"
    onClick={[Function]}
  >
    <span>
      Shop
    </span>
    <span
      className="screen-reader-text fuqaAG"
    >
      <span>
        (Opens in a new browser tab)
      </span>
    </span>
  </a>
  <img
    alt=""
    className="bTHZQB"
    src="noSites.svg"
  />
</div>
`;

exports[`the NoResults component matches the snapshot in the case of no sites 1`] = `
<div
  className="beArzs"
>
  <p>
    <span>
      Welcome to the downloads overview.
    </span>
  </p>
  <p>
    <span>
      It looks like you haven’t bought any products with downloadable files yet.
    </span>
  </p>
  <p>
    <span>
      Press the button below to visit yoast.com and look at our products.
    </span>
  </p>
  <button
    className="apAiK"
    onClick={[Function]}
  >
    <span>
      Add site
    </span>
  </button>
  <img
    alt=""
    className="bTHZQB"
    src="noSites.svg"
  />
</div>
`;

exports[`the NoResults component matches the snapshot in the case of no subscriptions 1`] = `
<div
  className="beArzs"
>
  <p>
    <span>
      Welcome to the downloads overview.
    </span>
  </p>
  <p>
    <span>
      It looks like you haven’t bought any products with downloadable files yet.
    </span>
  </p>
  <p>
    <span>
      Press the button below to visit yoast.com and look at our products.
    </span>
  </p>
  <a
    className="ewhypI"
    href="/"
    onClick={[Function]}
  >
    <span>
      Shop
    </span>
    <span
      className="screen-reader-text fuqaAG"
    >
      <span>
        (Opens in a new browser tab)
      </span>
    </span>
  </a>
  <img
    alt=""
    className="bTHZQB"
    src="noSites.svg"
  />
</div>
`;
